Codigo reformateado